# zephyr

Resources/: README.md
boards/arm/stm32f4_disco/: stm32f4_disco.dts
drivers/sensor/frsky_x8r/include/: SBUS.h
drivers/sensor/frsky_x8r/src/: SBUS.c  SBUS.cpp
drivers/sensor/mpu6050/: mpu6050.c  mpu6050.h
drivers/sensor/mpu6050/include/: MPU6050_6Axis_MotionApps20.h  MPU6050_6Axis_MotionApps_V6_12.h  dmpKey.h  dmpmap.h  mpu6050.h
drivers/sensor/mpu6050/src/: MPU6050.cpp  inv_mpu_dmp_motion_driver.c  mpu6050.c
dts/arm/st/f4/: stm32f4.dtsi
include/drivers/: i2c.h
include/uart_comm/: uart_comm.c  uart_comm.h
resources/: README.md
resources/stm32f4_disco/: README.md
samples/basic/blinky_pwm/src/: main.c
samples/basic/uart_comm/: CMakeLists.txt  prj.conf
samples/basic/uart_comm/src/: main.c
samples/hello_world/src/: main.c
samples/hello_world_test/: CMakeLists.txt  prj.conf
samples/hello_world_test/src/: main.c  rc_input.h
samples/sensor/mpu6050/: prj.conf
samples/sensor/mpu6050/boards/: stm32f4_disco.overlay
samples/sensor/mpu6050/src/: main.c
samples/uart_comm/: CMakeLists.txt  SBUS.cpp  prj.conf
samples/uart_comm/src/: main.c  uart_comm.c  uart_comm.h
samples/uart_comm_Back_up/: SBUS.h  sample.yaml
samples/uart_comm_Back_up/src/: main.c
share/zephyr-package/cmake/: current_path.txt
